cluster/apps/networking/traefik/sso/traefik-forward-auth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-sso
  namespace: networking
  labels:
    app: traefik-sso
spec:
  template:
    metadata:
      labels:
        name: traefik-sso
        app: traefik-sso
    spec:
      containers:
        - name: traefik-sso
          image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: Always
          ports:
            - containerPort: 4181
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-sso
  namespace: networking
spec:
  selector:
    app: traefik-sso
  ports:
    - protocol: TCP
      port: 4181
      targetPort: 4181
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sso
  namespace: networking
spec:
  forwardAuth:
    address: http://traefik-sso:4181
    authResponseHeaders:
      - "X-Forwarded-User"
    trustForwardHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-sso
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-sso
          port: 4181
      middlewares:
        - name: traefik-sso@kubernetescrd
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.${SECRET_DOMAIN}"
    options: {}
